<resources>
    <string name="hello_string">Hello, %s"</string>
    <string name="app_name">Fact or Cap game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back_previous_tab">go_back_previous_tab</string>
    <string name="statisctics_header">Statistics</string>
    <string name="total_games_string">Total games</string>
    <string name="highest_score_string">Highest Score</string>
    <string name="last_score_string">Last score</string>
    <string name="average_score_string">Average score</string>
    <string name="single_play_placeholder">Play singlemode</string>
    <string name="multiplayer_play_placeholder">Play online</string>
    <string name="join_room_placeholder">Join room</string>
    <string name="create_room_placeholder">Create room</string>
    <string name="statistic_placeholder">Statistics</string>
    <string name="leaderboard_placeholder">Leaderboard</string>
    <string name="change_language_placeholder">Change language</string>
    <string name="profile_picture_placeholder">Profile picture</string>
    <string name="change_username_menu_String">Change username</string>
    <string name="create_username_string">Create a username</string>
    <string name="create_username_hint_string">Username can only contain 4–20 letters and numbers</string>
    <string name="type_here_string">Type here</string>
    <string name="game_name">Fact or Cap</string>
    <string name="your_games_header">Your games</string>
    <string name="score_attribute_text">Score</string>
    <string name="date_attribute_text">Date</string>
    <string name="ok_string">OK</string>
    <string name="new_highscore">New Highscore!</string>
    <string name="game_score">Game score</string>
    <string name="menu">Menu</string>
    <string name="play_again">Play Again</string>
    <string name="your_games_duration_attribute">Duration</string>
    <string name="your_games_duration_attribute_text">Duration</string>
    <string name="join">Join</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="invite">Invite</string>
    <string name="start">Start</string>
    <string name="to_lobby">To Lobby</string>
    <string name="game_results">Game results</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="confirm">Confirm</string>
    <string name="please_check_your_internet_settings_and_return_to_menu">Please check your internet settings and return to Menu</string>
    <string name="leaderboard_string">Leaderboard</string>
    <string name="correct_answer_string_1">That\'s right!</string>
    <string name="correct_answer_string_2">Correct!</string>
    <string name="correct_answer_string_3">Great job!</string>
    <string name="correct_answer_string_4">Very true!</string>
    <string name="correct_answer_string_5">Wow!</string>
    <string name="correct_answer_string_6">You\'re doing great!</string>
    <string name="correct_answer_string_7">Well done!</string>
    <string name="correct_answer_string_8">Absolutely!</string>
    <string name="correct_answer_string_9">Cool!</string>
    <string name="correct_answer_string_10">Fantastic!</string>
    <string name="correct_answer">correct answer</string>

</resources>
