<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.statisitics.StatisticsFragment"
        android:padding="32dp"
        android:background="@drawable/ic_wallpaper">

    <TextView
            android:id="@+id/statistics_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintWidth="wrap_content"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="40sp"
            android:textColor="@color/font_color"
            android:text="@string/statisctics_header"
            android:fontFamily="@font/norwester"
            app:layout_constraintTop_toBottomOf="@+id/return_button" />

        <ImageButton
                android:id="@+id/return_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="14dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background = "@drawable/green_round_background"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_return"
                android:contentDescription="@string/go_back_previous_tab"
                tools:ignore="TouchTargetSizeCheck" />

    <TextView
            android:id="@+id/total_games_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/statistics_header"
            app:layout_constraintBottom_toTopOf="@id/highest_score_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="85dp"
            android:text="@string/total_games_string"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester" />

    <TextView
            android:id="@+id/highest_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_games_text"
            app:layout_constraintTop_toBottomOf="@id/total_games_text"
            android:layout_marginVertical="12dp"
            android:text="@string/highest_score_string"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester" />

    <TextView
            android:id="@+id/last_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/highest_score_text"
            app:layout_constraintTop_toBottomOf="@id/highest_score_text"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="145dp"
            android:text="@string/last_score_string"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester" />

    <TextView
            android:id="@+id/average_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/last_score_text"
            app:layout_constraintTop_toBottomOf="@id/last_score_text"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="105dp"
            android:text="@string/average_score_string"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester" />


    <TextView
            android:id="@+id/total_games_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statistics_header"
            android:layout_marginBottom="12dp"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester"
            android:layout_marginTop="15dp" />

    <TextView
            android:id="@+id/highest_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_games_value"
            app:layout_constraintTop_toBottomOf="@+id/total_games_value"
            android:layout_marginVertical="12dp"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester" />

    <TextView
            android:id="@+id/last_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/highest_score_value"
            app:layout_constraintTop_toBottomOf="@+id/highest_score_value"
            android:layout_marginVertical="12dp"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester"
            app:layout_constraintHorizontal_bias="0.529"
            android:layout_marginTop="12dp" />

    <TextView
            android:id="@+id/average_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/last_score_value"
            app:layout_constraintTop_toBottomOf="@+id/last_score_value"
            android:layout_marginVertical="12dp"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester"
            app:layout_constraintHorizontal_bias="0.415" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guideline2" />
  
    <TextView
            android:id="@+id/your_games_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_games_header"
            android:textSize="40sp"
            android:fontFamily="@font/norwester"
            android:textColor="@color/font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/average_score_text"
            android:layout_marginTop="50dp"
            />

    <TextView
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:id="@+id/your_games_score_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_attribute_text"
            android:fontFamily="@font/norwester"
            android:textColor="@color/font_color"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/your_games_header"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"/>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/your_games_header"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            android:id="@+id/your_games_date_attribute"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_attribute_text"
            android:fontFamily="@font/norwester"
            android:textColor="@color/font_color"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/your_games_score_attribute" />
</androidx.constraintlayout.widget.ConstraintLayout>

