<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.menu.MenuFragment"
        android:background="@drawable/ic_wallpaper">
    <TextView
            android:id="@+id/create_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.35"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_username_string"
            android:textSize="60sp"
            android:textColor="@color/black"
            android:fontFamily="@font/norwester"
            android:textAlignment="center"/>
    <EditText
            android:id="@+id/create_username_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_username_textview"
            app:layout_constraintVertical_bias="0.3"
            android:hint="@string/type_here_string"/>
    <TextView
            android:id="@+id/create_username_hint_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_username_edittext"
            android:text="@string/create_username_hint_string"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/norwester"
            android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>
