<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu.MenuFragment"
        android:background="@drawable/ic_wallpaper">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/page_container"
            android:padding="32dp"
            android:clipToPadding="false">
    <include layout="@layout/google_sign_in"
            android:id="@+id/sign_in_layout_unauthorized"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <include layout="@layout/signed_user_layout"
            android:id="@+id/sign_in_layout_authorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/game_logo_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintWidth="wrap_content"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="60sp"
            app:layout_constraintVertical_bias="0.30"
            android:textColor="@color/font_color"
            android:text="@string/game_name"
            android:fontFamily="@font/norwester" />

    <LinearLayout
            android:id="@+id/game_buttons_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/game_logo_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <ImageButton
                android:id="@+id/single_game_button"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/green_round_background"
                android:src="@drawable/ic_play"
                android:scaleType="center"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/single_play_placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/multiplayer_game_button"
                app:layout_constraintTop_toTopOf="@+id/multiplayer_game_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toLeftOf="@id/multiplayer_game_button" />

        <ImageButton
                android:id="@+id/multiplayer_game_button"
                android:layout_width="95dp"
                android:layout_height="95dp"
                app:layout_constraintLeft_toRightOf="@id/single_game_button"
                android:background="@drawable/green_round_background"
                android:src="@drawable/ic_group"
                android:scaleType="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/multiplayer_play_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/game_logo_textview"
                app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <ImageButton
            android:visibility="invisible"
            android:id="@+id/create_room_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:background="@drawable/green_round_background"
            android:backgroundTint="@color/primary_green"
            android:src="@drawable/ic_create"
            android:scaleType="fitCenter"
            android:gravity="start"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/create_room_placeholder"
            app:layout_constraintBottom_toTopOf="@id/join_room_button"
            app:layout_constraintTop_toTopOf="@+id/game_buttons_ll"
            app:layout_constraintStart_toEndOf="@+id/game_buttons_ll" />

    <ImageButton
            android:visibility="invisible"
            android:id="@+id/join_room_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:background="@drawable/green_round_background"
            android:backgroundTint="@color/primary_green"
            android:src="@drawable/ic_join"
            android:scaleType="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/join_room_placeholder"
            app:layout_constraintTop_toBottomOf="@id/create_room_button"
            app:layout_constraintBottom_toBottomOf="@+id/game_buttons_ll"
            app:layout_constraintStart_toEndOf="@+id/game_buttons_ll" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/status_buttons_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="@+id/game_buttons_ll"
            app:layout_constraintEnd_toEndOf="@+id/game_buttons_ll"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toBottomOf="@+id/game_buttons_ll">

        <ImageButton
                android:id="@+id/stat_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_stat"
                android:background="@drawable/green_round_background"
                android:scaleType="center"
                android:contentDescription="@string/statistic_placeholder" />

        <ImageButton
                android:id="@+id/leaderboard_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_cup"
                android:background="@drawable/green_round_background"
                android:scaleType="center"
                android:contentDescription="@string/leaderboard_placeholder" />

        <ImageButton
                android:id="@+id/change_volume_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_volume_up"
                android:scaleType="center"
                android:background="@drawable/green_round_background"
                android:contentDescription="@string/change_language_placeholder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
