<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/ic_wallpaper"
        android:padding="32dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/page_container">
    <ImageButton
            android:id="@+id/return_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background = "@drawable/green_round_background"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_return"
            android:contentDescription="@string/go_back_previous_tab"
            tools:ignore="TouchTargetSizeCheck" />

    <TextView
            android:id="@+id/tv_invite_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_a_friend"
            android:textSize="45sp"
            android:layout_margin="18dp"
            android:fontFamily="@font/norwester"
            android:textColor="@color/font_color"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/return_button">

    </TextView>

    <EditText
            android:id="@+id/find_users_edittext"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:hint="@string/type_here_string"
            android:textColorHint="@color/offline_indicator_color"
            android:inputType="text"
            android:autofillHints="name"
            android:maxLines="1"
            android:textSize="25sp"
            android:layout_marginTop="18dp"
            android:textColor="@color/font_color"
            android:drawableStart="@drawable/search_toggle_icon"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="72dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_friend"
            app:layout_constraintRight_toRightOf="@id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
            android:id="@+id/search_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="fitCenter"
            android:maxLines="1"
            android:layout_marginRight="1dp"
            android:background="@drawable/green_round_background"
            android:src="@drawable/ic_next"
            app:layout_constraintTop_toTopOf="@id/find_users_edittext"
            app:layout_constraintRight_toRightOf="@id/find_users_edittext"
            app:layout_constraintBottom_toBottomOf="@id/find_users_edittext"
            tools:layout_editor_absoluteX="324dp" />


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_found_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            tools:listitem="@layout/found_user"
            tools:itemCount="4"
            app:layout_constraintLeft_toLeftOf="@id/find_users_edittext"
            app:layout_constraintRight_toRightOf="@id/search_button"
            app:layout_constraintTop_toBottomOf="@id/find_users_edittext"
            >

    </androidx.recyclerview.widget.RecyclerView>


    <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="80dp"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:padding="13dp"
            android:text="@string/confirm"
            android:textSize="35sp"
            android:textColor="@color/font_color"
            android:fontFamily="@font/norwester"
            android:maxLines="1"
            android:layout_marginBottom="24dp"
            app:autoSizeTextType="uniform"
            android:src="@drawable/green_round_background"
            android:theme="@style/Button.Main"
            app:layout_constraintEnd_toEndOf="@id/tv_invite_friend"
            app:layout_constraintStart_toStartOf="@id/tv_invite_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            >

    </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>